jenkins_kustmize_deploy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  sessionAffinity: None
  type: ClusterIP
  selector:
    app: jenkins
---
apiVersion: v1
kind: Service
metadata:
  name: jenkins-jnlp4
spec:
  ports:
  - name: jnlp
    port: 50000
    protocol: TCP
    targetPort: 50000
  sessionAffinity: None
  type: ClusterIP
  selector:
    app: jenkins
